# kinematikaRobotOmni

./: CMakeLists.txt  contoh.cpp
include/KinematikaRobot/: KinematikaBalik.h  KinematikaMaju.h
src/: KinematikaBalik.cpp  KinematikaMaju.cpp
